# CPM_TemplateWithZigBuild

./: CMakeLists.txt  README.md  main.cpp
cmake/: toolchain-aarch64-linux-gnu.cmake  toolchain-x86_64-linux-musl.cmake  toolchain-x86_64-windows-gnu.cmake
